outputs/tsp_constructive-constructive/2025-09-19_00-14-35/evaluations/problem_eval3706601827557281096_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance later. It dynamically adjusts weights to balance exploration and exploitation, ensuring global connectivity is maintained while progressively refining local choices.}
                                                                                                                                                                                    ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance later. It dynamically adjusts weights to balance exploration and exploitation, ensuring global connectivity is maintained while progressively refining local choices.}
                                                                                                                                                                                    ^
SyntaxError: unmatched '}'
